<?xml version="1.0"?>
<package format="3">
  <name>leap_hand_densetact</name>
  <version>0.0.0</version>
  <description>The leap_hand package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anag@todo.todo">anag</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be ROS 2 packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <!--<depend>opencv2</depend>
  <depend>cv_bridge</depend> -->
  
  <!--<depend>kdl</depend>
  <depend>kdl_parser</depend> -->
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>

  <depend>leap_hand_utils</depend>
  <!--<depend>urdf</depend>
  <depend>gazebo_ros_pkgs</depend>-->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>

